--- a/Engine.Core/Engine.Core.fsproj
+++ b/Engine.Core/Engine.Core.fsproj
@@ -61,6 +61,9 @@
   </Target>
   <ItemGroup>
     <Content Include="packages.config" />
+    <Compile Include="..\Common\Constants.fs">
+      <Link>Constants.fs</Link>
+    </Compile>
     <Compile Include="TddStud10RunnerDomain.fs" />
     <Compile Include="Logger.fs" />
     <Compile Include="SafeExec.fs" />
