--- a/Hosts/Common/CommonUI.UnitTests/CommonUI.UnitTests.csproj
+++ b/Hosts/Common/CommonUI.UnitTests/CommonUI.UnitTests.csproj
@@ -75,6 +75,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\..\tddstud10.snk" />
+    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
