--- a/Engine.Core.UnitTests/Engine.Core.UnitTests.fsproj
+++ b/Engine.Core.UnitTests/Engine.Core.UnitTests.fsproj
@@ -64,6 +64,7 @@
   </Target>
   <ItemGroup>
     <Content Include="app.config" />
+    <Compile Include="Domain\FilePathTests.fs" />
     <Compile Include="TestFramework.CallSpy.fs" />
     <Compile Include="TestDoubles.RunExecutor.fs" />
     <Content Include="packages.config" />
@@ -74,6 +75,11 @@
     <Compile Include="RunStateTrackerTests.fs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Common\Domain\Domain.fsproj">
+      <Name>Domain</Name>
+      <Project>{e5fb2293-1833-4c4c-800e-a31ac891a931}</Project>
+      <Private>True</Private>
+    </ProjectReference>
     <ProjectReference Include="..\TestHost.Core\TestHost.Core.fsproj">
       <Name>TestHost.Core</Name>
       <Project>{84693096-cba0-407a-900a-3b48d21c5459}</Project>
