--- a/TestHost/TestHost.csproj
+++ b/TestHost/TestHost.csproj
@@ -61,16 +61,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CoverageData.cs" />
-    <Compile Include="CoverageSession.cs" />
+    <Compile Include="PerAssemblySequencePointsCoverage.cs" />
     <Compile Include="Marker.cs" />
+    <Compile Include="PerAssemblyTestIds.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CodeCoverageServer.cs" />
-    <Compile Include="SequencePoint.cs" />
-    <Compile Include="SequencePointSession.cs" />
+    <Compile Include="PerAssemblySequencePoints.cs" />
     <Compile Include="SerializableDictionary.cs" />
-    <Compile Include="TestDetails.cs" />
+    <Compile Include="PerTestIdResults.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -78,6 +77,10 @@
     <None Include="..\tddstud10.snk" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Common\Domain\Domain.fsproj">
+      <Project>{e5fb2293-1833-4c4c-800e-a31ac891a931}</Project>
+      <Name>Domain</Name>
+    </ProjectReference>
     <ProjectReference Include="..\TestHost.Core\TestHost.Core.fsproj">
       <Project>{84693096-cba0-407a-900a-3b48d21c5459}</Project>
       <Name>TestHost.Core</Name>
