--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\Common\Domain\packages.config" />
   <repository path="..\Engine.Core.UnitTests\packages.config" />
   <repository path="..\Engine.Core\packages.config" />
   <repository path="..\Engine\packages.config" />
