--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -10,6 +10,7 @@
   <repository path="..\Hosts\VS\TddStudioPackage.Extensions\packages.config" />
   <repository path="..\Hosts\VS\TddStudioPackage\packages.config" />
   <repository path="..\RealTimeEtwListener\packages.config" />
+  <repository path="..\TestExecution\TestRuntime\packages.config" />
   <repository path="..\TestHost.Core.UnitTests\packages.config" />
   <repository path="..\TestHost.Core\packages.config" />
   <repository path="..\TestHost\packages.config" />
