--- a/TestExecution/TestRuntime/TestRuntime.csproj
+++ b/TestExecution/TestRuntime/TestRuntime.csproj
@@ -30,7 +30,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-    <PropertyGroup>
+  <PropertyGroup>
     <SignAssembly>true</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
@@ -52,9 +52,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ICoverageDataCollector.cs" />
+    <Compile Include="Lazy.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="Marker.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestRunTimeInstaller.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
