--- a/TestHost/TestHost.csproj
+++ b/TestHost/TestHost.csproj
@@ -61,10 +61,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Marker.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="CodeCoverageServer.cs" />
+    <Compile Include="CoverageDataCollector.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -75,6 +74,10 @@
     <ProjectReference Include="..\Common\Domain\Domain.fsproj">
       <Project>{e5fb2293-1833-4c4c-800e-a31ac891a931}</Project>
       <Name>Domain</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TestExecution\TestRuntime\TestRuntime.csproj">
+      <Project>{0fea2e86-4ee0-4fd8-949d-c74189b855d9}</Project>
+      <Name>TestRuntime</Name>
     </ProjectReference>
     <ProjectReference Include="..\TestHost.Core\TestHost.Core.fsproj">
       <Project>{84693096-cba0-407a-900a-3b48d21c5459}</Project>
