Cleanups mainly from the e2e testing.

--- a/TestExecution/TestRuntime/TestRuntime.csproj
+++ b/TestExecution/TestRuntime/TestRuntime.csproj
@@ -52,7 +52,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ICoverageDataCollector.cs" />
-    <Compile Include="Lazy.cs" />
+    <Compile Include="LazyObject.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="Marker.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
