fixing vsix packaging of testhost.config [not tested in ide yet]

--- a/TestHost/TestHost.csproj
+++ b/TestHost/TestHost.csproj
@@ -66,7 +66,7 @@
     <Compile Include="CoverageDataCollector.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="Application.Config" />
     <None Include="packages.config" />
     <None Include="..\tddstud10.snk" />
   </ItemGroup>
@@ -92,6 +92,9 @@
     <Error Condition="!Exists('..\packages\Microsoft.Diagnostics.Tracing.EventRegister.1.0.26\build\Microsoft.Diagnostics.Tracing.EventRegister.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.Diagnostics.Tracing.EventRegister.1.0.26\build\Microsoft.Diagnostics.Tracing.EventRegister.targets'))" />
   </Target>
   <Import Project="..\packages\Microsoft.Diagnostics.Tracing.EventRegister.1.0.26\build\Microsoft.Diagnostics.Tracing.EventRegister.targets" Condition="('$(Configuration)' != 'Debug') and Exists('..\packages\Microsoft.Diagnostics.Tracing.EventRegister.1.0.26\build\Microsoft.Diagnostics.Tracing.EventRegister.targets')" />
+  <PropertyGroup>
+    <PostBuildEvent>echo F | xcopy /fry $(ProjectDir)\Application.Config $(TargetPath).config</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
